--- a/FixDailyCI/libp2p/protocols/connectivity/autonat.html
+++ b/FixDailyCI/libp2p/protocols/connectivity/autonat.html
@@ -435,7 +435,7 @@ class="link-seesrc" target="_blank">Source</a>
 </dd>
 </div>
 <div id="encode,AutonatDial" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#encode%2CAutonatDial"><span class="Identifier">encode</span></a><span class="Other">(</span><span class="Identifier">d</span><span class="Other">:</span> <a href="autonat.html#AutonatDial"><span class="Identifier">AutonatDial</span></a><span class="Other">)</span><span class="Other">:</span> <a href="../../protobuf/minprotobuf.html#ProtoBuffer"><span class="Identifier">ProtoBuffer</span></a> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+<dt><pre><span class="Keyword">proc</span> <a href="#encode%2CAutonatDial"><span class="Identifier">encode</span></a><span class="Other">(</span><span class="Identifier">d</span><span class="Other">:</span> <a href="autonat.html#AutonatDial"><span class="Identifier">AutonatDial</span></a><span class="Other">)</span><span class="Other">:</span> <a href="../../protobuf/minprotobuf.html#ProtoBuffer"><span class="Identifier">ProtoBuffer</span></a> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
@@ -447,7 +447,7 @@ class="link-seesrc" target="_blank">Source</a>
 </dd>
 </div>
 <div id="encode,AutonatMsg" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#encode%2CAutonatMsg"><span class="Identifier">encode</span></a><span class="Other">(</span><span class="Identifier">msg</span><span class="Other">:</span> <span class="Identifier">AutonatMsg</span><span class="Other">)</span><span class="Other">:</span> <a href="../../protobuf/minprotobuf.html#ProtoBuffer"><span class="Identifier">ProtoBuffer</span></a> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+<dt><pre><span class="Keyword">proc</span> <a href="#encode%2CAutonatMsg"><span class="Identifier">encode</span></a><span class="Other">(</span><span class="Identifier">msg</span><span class="Other">:</span> <span class="Identifier">AutonatMsg</span><span class="Other">)</span><span class="Other">:</span> <a href="../../protobuf/minprotobuf.html#ProtoBuffer"><span class="Identifier">ProtoBuffer</span></a> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
@@ -459,8 +459,7 @@ class="link-seesrc" target="_blank">Source</a>
 </dd>
 </div>
 <div id="encode,AutonatDialResponse" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#encode%2CAutonatDialResponse"><span class="Identifier">encode</span></a><span class="Other">(</span><span class="Identifier">r</span><span class="Other">:</span> <a href="autonat.html#AutonatDialResponse"><span class="Identifier">AutonatDialResponse</span></a><span class="Other">)</span><span class="Other">:</span> <a href="../../protobuf/minprotobuf.html#ProtoBuffer"><span class="Identifier">ProtoBuffer</span></a> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+<dt><pre><span class="Keyword">proc</span> <a href="#encode%2CAutonatDialResponse"><span class="Identifier">encode</span></a><span class="Other">(</span><span class="Identifier">r</span><span class="Other">:</span> <a href="autonat.html#AutonatDialResponse"><span class="Identifier">AutonatDialResponse</span></a><span class="Other">)</span><span class="Other">:</span> <a href="../../protobuf/minprotobuf.html#ProtoBuffer"><span class="Identifier">ProtoBuffer</span></a> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
@@ -511,7 +510,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-12-09 13:15:59 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-12-09 13:56:45 UTC</small>
       </div>
     </div>
   </div>
