--- a/FixDailyCI/libp2p/protocols/pubsub/rpc/protobuf.html
+++ b/FixDailyCI/libp2p/protocols/pubsub/rpc/protobuf.html
@@ -458,7 +458,7 @@ class="link-seesrc" target="_blank">Source</a>
 </div>
 <div id="encodeMessage,Message,bool" class="tohide">
 <dt><pre><span class="Keyword">proc</span> <a href="#encodeMessage%2CMessage%2Cbool"><span class="Identifier">encodeMessage</span></a><span class="Other">(</span><span class="Identifier">msg</span><span class="Other">:</span> <a href="messages.html#Message"><span class="Identifier">Message</span></a><span class="Other">;</span> <span class="Identifier">anonymize</span><span class="Other">:</span> <span class="Identifier">bool</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
@@ -471,7 +471,7 @@ class="link-seesrc" target="_blank">Source</a>
 </div>
 <div id="encodeRpcMsg,RPCMsg,bool" class="tohide">
 <dt><pre><span class="Keyword">proc</span> <a href="#encodeRpcMsg%2CRPCMsg%2Cbool"><span class="Identifier">encodeRpcMsg</span></a><span class="Other">(</span><span class="Identifier">msg</span><span class="Other">:</span> <a href="messages.html#RPCMsg"><span class="Identifier">RPCMsg</span></a><span class="Other">;</span> <span class="Identifier">anonymize</span><span class="Other">:</span> <span class="Identifier">bool</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
@@ -484,7 +484,7 @@ class="link-seesrc" target="_blank">Source</a>
 </div>
 <div id="write,ProtoBuffer,int,ControlMessage" class="tohide">
 <dt><pre><span class="Keyword">proc</span> <a href="#write%2CProtoBuffer%2Cint%2CControlMessage"><span class="Identifier">write</span></a><span class="Other">(</span><span class="Identifier">pb</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="../../../protobuf/minprotobuf.html#ProtoBuffer"><span class="Identifier">ProtoBuffer</span></a><span class="Other">;</span> <span class="Identifier">field</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">;</span> <span class="Identifier">control</span><span class="Other">:</span> <a href="messages.html#ControlMessage"><span class="Identifier">ControlMessage</span></a><span class="Other">)</span> {.
-    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
@@ -497,7 +497,7 @@ class="link-seesrc" target="_blank">Source</a>
 </div>
 <div id="write,ProtoBuffer,int,ControlGraft" class="tohide">
 <dt><pre><span class="Keyword">proc</span> <a href="#write%2CProtoBuffer%2Cint%2CControlGraft"><span class="Identifier">write</span></a><span class="Other">(</span><span class="Identifier">pb</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="../../../protobuf/minprotobuf.html#ProtoBuffer"><span class="Identifier">ProtoBuffer</span></a><span class="Other">;</span> <span class="Identifier">field</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">;</span> <span class="Identifier">graft</span><span class="Other">:</span> <a href="messages.html#ControlGraft"><span class="Identifier">ControlGraft</span></a><span class="Other">)</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
@@ -510,7 +510,7 @@ class="link-seesrc" target="_blank">Source</a>
 </div>
 <div id="write,ProtoBuffer,int,ControlIHave" class="tohide">
 <dt><pre><span class="Keyword">proc</span> <a href="#write%2CProtoBuffer%2Cint%2CControlIHave"><span class="Identifier">write</span></a><span class="Other">(</span><span class="Identifier">pb</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="../../../protobuf/minprotobuf.html#ProtoBuffer"><span class="Identifier">ProtoBuffer</span></a><span class="Other">;</span> <span class="Identifier">field</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">;</span> <span class="Identifier">ihave</span><span class="Other">:</span> <a href="messages.html#ControlIHave"><span class="Identifier">ControlIHave</span></a><span class="Other">)</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
@@ -523,7 +523,7 @@ class="link-seesrc" target="_blank">Source</a>
 </div>
 <div id="write,ProtoBuffer,int,PeerInfoMsg" class="tohide">
 <dt><pre><span class="Keyword">proc</span> <a href="#write%2CProtoBuffer%2Cint%2CPeerInfoMsg"><span class="Identifier">write</span></a><span class="Other">(</span><span class="Identifier">pb</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="../../../protobuf/minprotobuf.html#ProtoBuffer"><span class="Identifier">ProtoBuffer</span></a><span class="Other">;</span> <span class="Identifier">field</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">;</span> <span class="Identifier">infoMsg</span><span class="Other">:</span> <a href="messages.html#PeerInfoMsg"><span class="Identifier">PeerInfoMsg</span></a><span class="Other">)</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
@@ -536,7 +536,7 @@ class="link-seesrc" target="_blank">Source</a>
 </div>
 <div id="write,ProtoBuffer,int,ControlIWant" class="tohide">
 <dt><pre><span class="Keyword">proc</span> <a href="#write%2CProtoBuffer%2Cint%2CControlIWant"><span class="Identifier">write</span></a><span class="Other">(</span><span class="Identifier">pb</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="../../../protobuf/minprotobuf.html#ProtoBuffer"><span class="Identifier">ProtoBuffer</span></a><span class="Other">;</span> <span class="Identifier">field</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">;</span> <span class="Identifier">iwant</span><span class="Other">:</span> <a href="messages.html#ControlIWant"><span class="Identifier">ControlIWant</span></a><span class="Other">)</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
@@ -549,7 +549,7 @@ class="link-seesrc" target="_blank">Source</a>
 </div>
 <div id="write,ProtoBuffer,int,Message,bool" class="tohide">
 <dt><pre><span class="Keyword">proc</span> <a href="#write%2CProtoBuffer%2Cint%2CMessage%2Cbool"><span class="Identifier">write</span></a><span class="Other">(</span><span class="Identifier">pb</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="../../../protobuf/minprotobuf.html#ProtoBuffer"><span class="Identifier">ProtoBuffer</span></a><span class="Other">;</span> <span class="Identifier">field</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">;</span> <span class="Identifier">msg</span><span class="Other">:</span> <a href="messages.html#Message"><span class="Identifier">Message</span></a><span class="Other">;</span> <span class="Identifier">anonymize</span><span class="Other">:</span> <span class="Identifier">bool</span><span class="Other">)</span> {.
-    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
@@ -562,7 +562,7 @@ class="link-seesrc" target="_blank">Source</a>
 </div>
 <div id="write,ProtoBuffer,int,ControlPrune" class="tohide">
 <dt><pre><span class="Keyword">proc</span> <a href="#write%2CProtoBuffer%2Cint%2CControlPrune"><span class="Identifier">write</span></a><span class="Other">(</span><span class="Identifier">pb</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="../../../protobuf/minprotobuf.html#ProtoBuffer"><span class="Identifier">ProtoBuffer</span></a><span class="Other">;</span> <span class="Identifier">field</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">;</span> <span class="Identifier">prune</span><span class="Other">:</span> <a href="messages.html#ControlPrune"><span class="Identifier">ControlPrune</span></a><span class="Other">)</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
@@ -575,7 +575,7 @@ class="link-seesrc" target="_blank">Source</a>
 </div>
 <div id="write,ProtoBuffer,int,SubOpts" class="tohide">
 <dt><pre><span class="Keyword">proc</span> <a href="#write%2CProtoBuffer%2Cint%2CSubOpts"><span class="Identifier">write</span></a><span class="Other">(</span><span class="Identifier">pb</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="../../../protobuf/minprotobuf.html#ProtoBuffer"><span class="Identifier">ProtoBuffer</span></a><span class="Other">;</span> <span class="Identifier">field</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">;</span> <span class="Identifier">subs</span><span class="Other">:</span> <a href="messages.html#SubOpts"><span class="Identifier">SubOpts</span></a><span class="Other">)</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
@@ -596,7 +596,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-12-09 13:16:00 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-12-09 13:56:46 UTC</small>
       </div>
     </div>
   </div>
