--- a/FixDailyCI/libp2p/multicodec.html
+++ b/FixDailyCI/libp2p/multicodec.html
@@ -460,8 +460,7 @@ class="link-seesrc" target="_blank">Source</a>
 </dd>
 </div>
 <div id="write,VBuffer,MultiCodec" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#write%2CVBuffer%2CMultiCodec"><span class="Identifier">write</span></a><span class="Other">(</span><span class="Identifier">vb</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="vbuffer.html#VBuffer"><span class="Identifier">VBuffer</span></a><span class="Other">;</span> <span class="Identifier">mc</span><span class="Other">:</span> <a href="multicodec.html#MultiCodec"><span class="Identifier">MultiCodec</span></a><span class="Other">)</span> {.<span class="Identifier">inline</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
-    <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+<dt><pre><span class="Keyword">proc</span> <a href="#write%2CVBuffer%2CMultiCodec"><span class="Identifier">write</span></a><span class="Other">(</span><span class="Identifier">vb</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="vbuffer.html#VBuffer"><span class="Identifier">VBuffer</span></a><span class="Other">;</span> <span class="Identifier">mc</span><span class="Other">:</span> <a href="multicodec.html#MultiCodec"><span class="Identifier">MultiCodec</span></a><span class="Other">)</span> {.<span class="Identifier">inline</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 Write MultiCodec to buffer <tt class="docutils literal"><span class="pre">vb</span></tt>.
@@ -482,7 +481,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-12-09 13:15:56 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-12-09 13:56:42 UTC</small>
       </div>
     </div>
   </div>
