--- a/FixDailyCI/libp2p/peerid.html
+++ b/FixDailyCI/libp2p/peerid.html
@@ -466,7 +466,7 @@ class="link-seesrc" target="_blank">Source</a>
 </dd>
 </div>
 <div id="hasPublicKey,PeerId" class="tohide">
-<dt><pre><span class="Keyword">func</span> <a href="#hasPublicKey%2CPeerId"><span class="Identifier">hasPublicKey</span></a><span class="Other">(</span><span class="Identifier">pid</span><span class="Other">:</span> <a href="peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> </span><span class="Identifier">public</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+<dt><pre><span class="Keyword">func</span> <a href="#hasPublicKey%2CPeerId"><span class="Identifier">hasPublicKey</span></a><span class="Other">(</span><span class="Identifier">pid</span><span class="Other">:</span> <a href="peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">bool</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> </span><span class="Identifier">public</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 Returns <tt class="docutils literal"><span class="pre">true</span></tt> if <tt class="docutils literal"><span class="pre">pid</span></tt> is small enough to hold public key inside.
@@ -649,8 +649,7 @@ class="link-seesrc" target="_blank">Source</a>
 </dd>
 </div>
 <div id="write,VBuffer,PeerId" class="tohide">
-<dt><pre><span class="Keyword">func</span> <a href="#write%2CVBuffer%2CPeerId"><span class="Identifier">write</span></a><span class="Other">(</span><span class="Identifier">vb</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="vbuffer.html#VBuffer"><span class="Identifier">VBuffer</span></a><span class="Other">;</span> <span class="Identifier">pid</span><span class="Other">:</span> <a href="peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">)</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> </span><span class="Identifier">public</span><span class="Other">,</span>
-    <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+<dt><pre><span class="Keyword">func</span> <a href="#write%2CVBuffer%2CPeerId"><span class="Identifier">write</span></a><span class="Other">(</span><span class="Identifier">vb</span><span class="Other">:</span> <span class="Keyword">var</span> <a href="vbuffer.html#VBuffer"><span class="Identifier">VBuffer</span></a><span class="Other">;</span> <span class="Identifier">pid</span><span class="Other">:</span> <a href="peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">)</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> </span><span class="Identifier">public</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 Write PeerId value <tt class="docutils literal"><span class="pre">peerid</span></tt> to buffer <tt class="docutils literal"><span class="pre">vb</span></tt>.
@@ -789,7 +788,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-12-09 13:15:57 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-12-09 13:56:43 UTC</small>
       </div>
     </div>
   </div>
