--- a/FixDailyCI/libp2p/routing_record.html
+++ b/FixDailyCI/libp2p/routing_record.html
@@ -359,7 +359,7 @@ class="link-seesrc" target="_blank">Source</a>
 </dd>
 </div>
 <div id="encode,PeerRecord" class="tohide">
-<dt><pre><span class="Keyword">proc</span> <a href="#encode%2CPeerRecord"><span class="Identifier">encode</span></a><span class="Other">(</span><span class="Identifier">record</span><span class="Other">:</span> <a href="routing_record.html#PeerRecord"><span class="Identifier">PeerRecord</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+<dt><pre><span class="Keyword">proc</span> <a href="#encode%2CPeerRecord"><span class="Identifier">encode</span></a><span class="Other">(</span><span class="Identifier">record</span><span class="Other">:</span> <a href="routing_record.html#PeerRecord"><span class="Identifier">PeerRecord</span></a><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">byte</span><span class="Other">]</span> {.<span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 
@@ -422,7 +422,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-12-09 13:15:58 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-12-09 13:56:44 UTC</small>
       </div>
     </div>
   </div>
