--- a/autonat-service/libp2p/dial.html
+++ b/autonat-service/libp2p/dial.html
@@ -219,8 +219,10 @@ window.addEventListener("DOMContentLoaded", main2);
 
   </ul>
   <ul class="simple nested-toc-section">connect
-      <li><a class="reference" href="#connect.e%2CDial%2Cseq%5BMultiAddress%5D"
-    title="connect(self: Dial; addrs: seq[MultiAddress]): Future[PeerId]">connect(self: Dial; addrs: seq[MultiAddress]): Future[PeerId]</a></li>
+      <li><a class="reference" href="#connect.e%2CDial%2CMultiAddress"
+    title="connect(self: Dial; address: MultiAddress; allowUnknownPeerId = false): Future[
+    PeerId]">connect(self: Dial; address: MultiAddress; allowUnknownPeerId = false): Future[
+    PeerId]</a></li>
   <li><a class="reference" href="#connect.e%2CDial%2CPeerId%2Cseq%5BMultiAddress%5D"
     title="connect(self: Dial; peerId: PeerId; addrs: seq[MultiAddress]; forceDial = false): Future[
     void]">connect(self: Dial; peerId: PeerId; addrs: seq[MultiAddress]; forceDial = false): Future[
@@ -291,22 +293,23 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/autonat-service/libp2p/dial.nim#L67"
+href="https://github.com/status-im/nim-libp2p/tree/autonat-service/libp2p/dial.nim#L68"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/dial.nim#L67" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/dial.nim#L68" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
-<div id="connect.e,Dial,seq[MultiAddress]" class="tohide">
-<dt><pre><span class="Keyword">method</span> <a href="#connect.e%2CDial%2Cseq%5BMultiAddress%5D"><span class="Identifier">connect</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="dial.html#Dial"><span class="Identifier">Dial</span></a><span class="Other">;</span> <span class="Identifier">addrs</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><a href="multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span><a href="peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">]</span> {.<span class="Identifier">base</span><span class="Other">,</span>
-    <span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
+<div id="connect.e,Dial,MultiAddress" class="tohide">
+<dt><pre><span class="Keyword">method</span> <a href="#connect.e%2CDial%2CMultiAddress"><span class="Identifier">connect</span></a><span class="Other">(</span><span class="Identifier">self</span><span class="Other">:</span> <a href="dial.html#Dial"><span class="Identifier">Dial</span></a><span class="Other">;</span> <span class="Identifier">address</span><span class="Other">:</span> <a href="multiaddress.html#MultiAddress"><span class="Identifier">MultiAddress</span></a><span class="Other">;</span> <span class="Identifier">allowUnknownPeerId</span> <span class="Other">=</span> <span class="Identifier">false</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">Future</span><span class="Other">[</span>
+    <a href="peerid.html#PeerId"><span class="Identifier">PeerId</span></a><span class="Other">]</span> {.<span class="Identifier">base</span><span class="Other">,</span> <span class="Identifier">stackTrace</span><span class="Other">:</span> <span class="DecNumber">false</span><span class="Other">,</span> <span><span class="Other pragmadots">...</span></span><span class="pragmawrap"><span class="Identifier">gcsafe</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span>
+              <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">RootEffect</span><span class="Other">]</span></span>.}</pre></dt>
 <dd>
 
 Connects to a peer and retrieve its PeerId
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/autonat-service/libp2p/dial.nim#L39"
+href="https://github.com/status-im/nim-libp2p/tree/autonat-service/libp2p/dial.nim#L40"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/dial.nim#L39" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/dial.nim#L40" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -332,9 +335,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 create a protocol stream and establish a connection if one doesn't exist already 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/autonat-service/libp2p/dial.nim#L60"
+href="https://github.com/status-im/nim-libp2p/tree/autonat-service/libp2p/dial.nim#L61"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/dial.nim#L60" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/dial.nim#L61" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -345,9 +348,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 create a protocol stream over an existing connection 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/autonat-service/libp2p/dial.nim#L48"
+href="https://github.com/status-im/nim-libp2p/tree/autonat-service/libp2p/dial.nim#L49"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/dial.nim#L48" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/dial.nim#L49" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -359,9 +362,9 @@ class="link-seesrc" target="_blank">Source</a>
 
 
 &nbsp;&nbsp;<a
-href="https://github.com/status-im/nim-libp2p/tree/autonat-service/libp2p/dial.nim#L75"
+href="https://github.com/status-im/nim-libp2p/tree/autonat-service/libp2p/dial.nim#L76"
 class="link-seesrc" target="_blank">Source</a>
-&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/dial.nim#L75" class="link-seesrc" target="_blank" >Edit</a>
+&nbsp;&nbsp;<a href="https://github.com/status-im/nim-libp2p/edit/devel/libp2p/dial.nim#L76" class="link-seesrc" target="_blank" >Edit</a>
 
 </dd>
 </div>
@@ -375,7 +378,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-12-12 18:09:44 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-12-13 14:39:45 UTC</small>
       </div>
     </div>
   </div>
