--- a/autonat-service/libp2p/protocols/pubsub/pubsub.html
+++ b/autonat-service/libp2p/protocols/pubsub/pubsub.html
@@ -1147,7 +1147,7 @@ class="link-seesrc" target="_blank">Source</a>
 <div class="section" id="19">
 <h1><a class="toc-backref" href="#19">Exports</a></h1>
 <dl class="item">
-<a href="pubsubpeer.html#PubSubPeer"><span class="Identifier">PubSubPeer</span></a>, <a href="pubsubpeer.html#PubSubObserver"><span class="Identifier">PubSubObserver</span></a>, <a href="../protocol.html#LPProtoHandler"><span class="Identifier">LPProtoHandler</span></a>, <a href="../protocol.html#LPProtocol"><span class="Identifier">LPProtocol</span></a>, <a href="../protocol.html#stop.e,LPProtocol"><span class="Identifier">stop</span></a>, <a href="../protocol.html#codec=,LPProtocol,string"><span class="Identifier">codec=</span></a>, <a href="../protocol.html#codec,LPProtocol"><span class="Identifier">codec</span></a>, <a href="../protocol.html#init.e,LPProtocol"><span class="Identifier">init</span></a>, <a href="../protocol.html#start.e,LPProtocol"><span class="Identifier">start</span></a>, <a href="errors.html#ValidationResult"><span class="Identifier">ValidationResult</span></a>
+<a href="pubsubpeer.html#PubSubPeer"><span class="Identifier">PubSubPeer</span></a>, <a href="pubsubpeer.html#PubSubObserver"><span class="Identifier">PubSubObserver</span></a>, <a href="../protocol.html#maxIncomingStreams=,LPProtocol,int"><span class="Identifier">maxIncomingStreams=</span></a>, <a href="../protocol.html#init.e,LPProtocol"><span class="Identifier">init</span></a>, <a href="../protocol.html#LPProtoHandler"><span class="Identifier">LPProtoHandler</span></a>, <a href="../protocol.html#codec=,LPProtocol,string"><span class="Identifier">codec=</span></a>, <a href="../protocol.html#maxIncomingStreams,LPProtocol"><span class="Identifier">maxIncomingStreams</span></a>, <a href="../protocol.html#LPProtocol"><span class="Identifier">LPProtocol</span></a>, <a href="../protocol.html#stop.e,LPProtocol"><span class="Identifier">stop</span></a>, <a href="../protocol.html#DefaultMaxIncomingStreams"><span class="Identifier">DefaultMaxIncomingStreams</span></a>, <a href="../protocol.html#start.e,LPProtocol"><span class="Identifier">start</span></a>, <a href="../protocol.html#new,typeLPProtocol,seq[string],LPProtoHandler"><span class="Identifier">new</span></a>, <a href="../protocol.html#codec,LPProtocol"><span class="Identifier">codec</span></a>, <a href="errors.html#ValidationResult"><span class="Identifier">ValidationResult</span></a>
 </dl></div>
 
   </div>
@@ -1157,7 +1157,7 @@ class="link-seesrc" target="_blank">Source</a>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2022-12-12 18:09:47 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2022-12-13 14:39:47 UTC</small>
       </div>
     </div>
   </div>
